# Derivative-pricing-in-C-

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  Makefile  PAPER_TRADING_PLAN.md  README.md
config/: paper_trading.json
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/engine/: market_data.py  pricer.py
dashboard/pages/: 01_vol_surface.py  02_greeks_explorer.py  03_model_comparison.py  04_yield_curve.py  05_barrier_analysis.py  06_correlation.py  07_risk_dashboard.py  08_market_data.py
examples/: american_options.cpp  barrier_options.cpp  bates_pricer.cpp  fdm_solver.cpp  fixed_income.cpp  greeks_engine.cpp  heston_pricer.cpp  jump_diffusion.cpp  main_demo.cpp  mc_european.cpp  mc_exotic.cpp  multi_asset_options.cpp  orderbook_demo.cpp  rate_models.cpp  risk_management.cpp  vol_surface.cpp
include/barrier/: barrier.h
include/fdm/: fdm.h
include/fixed_income/: fixed_income.h
include/greeks/: black_scholes.h  greeks_engine.h
include/matrix/: matrix.h
include/mc/: american_mc.h  monte_carlo.h
include/multi_asset/: multi_asset.h
include/option/: option.h
include/orderbook/: orderbook.h
include/payoff/: payoff.h
include/rates/: rate_models.h
include/risk/: risk.h
include/rng/: rng.h
include/trading/: config.h  logging.h  market_data.h  market_snapshot.h  option_types.h  position_tracker.h  risk_guard.h  simulated_exchange.h  strategy.h
include/trading/strategies/: mean_reversion.h
include/tree/: binomial_tree.h
include/vol/: implied_vol.h
results/: quantpricer_deep_dive.md
src/: paper_trader.cpp  quantpricer.cpp
tests/: test_runner.cpp
tools/: download_data.py  download_options_data.py  generate_data.cpp  generate_showcase.cpp  plot_bates.py  pricer_service.cpp  render_showcase.py  visualize.py
